added new post js

--- a/_posts/2016-09-03-JS-Math.md
+++ b/_posts/2016-09-03-JS-Math.md
@@ -53,4 +53,4 @@ Math.floor(Math.random() * 5 +1) ~ (0,5]`
 
 For reasons similar to ceil(), round() is not used since it too can produce a 0 when we may not want one, or produce a number that is above the target range. We would have to write our expressions in such a way as to prevent this. In doing so we make our code confusing and double up on the number of potential errors and bugs.
 
-[Roy][https://www.codecademy.com/en/forum_questions/520d13a2f10c609a79000efb]
+[Roy](https://www.codecademy.com/en/forum_questions/520d13a2f10c609a79000efb)
